--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "",
+  "description": "ORM ecommerce back end (from starter code)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git@github.com:thoughtsinbuttermilk/13-ModuleChallenge-ORMeCommerce-sambailey.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sam Bailey",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.3"
